[gd_scene load_steps=23 format=2]

[ext_resource path="res://scripts/no_input_mover.gd" type="Script" id=1]
[ext_resource path="res://bomb/assets/default/explode/explode-02.png" type="Texture" id=2]
[ext_resource path="res://bomb/assets/default/bomb/bomb-01.png" type="Texture" id=3]
[ext_resource path="res://bomb/assets/default/bomb/bomb-03.png" type="Texture" id=4]
[ext_resource path="res://bomb/assets/default/explode/explode-01.png" type="Texture" id=5]
[ext_resource path="res://bomb/assets/default/bomb/bomb-02.png" type="Texture" id=6]
[ext_resource path="res://bomb/assets/default/explode/explode-03.png" type="Texture" id=7]
[ext_resource path="res://bomb/scripts/bomb.gd" type="Script" id=8]
[ext_resource path="res://sounds/bomb_plant.ogg" type="AudioStream" id=9]
[ext_resource path="res://sounds/bomb_explosion.ogg" type="AudioStream" id=10]
[ext_resource path="res://explosion/explosion.tscn" type="PackedScene" id=11]
[ext_resource path="res://bomb/tres/CollisionShapeinner.tres" type="Shape2D" id=12]
[ext_resource path="res://bomb/tres/CollisionShapeOuter.tres" type="Shape2D" id=13]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "New Anim",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 2 ), ExtResource( 7 ) ],
"loop": false,
"name": "explode",
"speed": 8.0
} ]

[sub_resource type="Animation" id=10]
resource_name = "explode"
length = 1.6
step = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.57857 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "explode" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimatedSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("AnimatedSprite")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MovingBodyShape:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
length = 5.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "explode"
} ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "default" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MovingBodyShape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:collision_layer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:collision_mask")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 63 ]
}

[sub_resource type="Animation" id=11]
resource_name = "paused"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "explode" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MovingBodyShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:collision_layer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0, 0.374194, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=14]
gradient = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
color_ramp = SubResource( 14 )

[node name="Bomb" type="KinematicBody2D" groups=["bombs"]]
collision_layer = 8
collision_mask = 63
script = ExtResource( 8 )
explosion_scene = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 6 )
animation = "New Anim"
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
method_call_mode = 1
anims/explode = SubResource( 10 )
anims/idle = SubResource( 9 )
anims/paused = SubResource( 11 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16

[node name="TriggerShape" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 12 )
one_way_collision = true

[node name="MovingBodyShape" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )
disabled = true

[node name="Mover" type="Node2D" parent="."]
script = ExtResource( 1 )
enabled = false

[node name="CollisionShapeInnerLeft" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = ExtResource( 12 )
one_way_collision = true

[node name="CollisionShapeinnerRight" type="CollisionShape2D" parent="."]
visible = false
rotation = -1.5708
shape = ExtResource( 12 )
one_way_collision = true

[node name="CollisionShapeInnerUp" type="CollisionShape2D" parent="."]
visible = false
rotation = 3.14159
shape = ExtResource( 12 )
one_way_collision = true

[node name="CollisionShapeinnerDown" type="CollisionShape2D" parent="."]
visible = false
shape = ExtResource( 12 )
one_way_collision = true

[node name="CollisionShapeOuterLeft" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = ExtResource( 13 )
one_way_collision = true

[node name="CollisionShapeOuterRight" type="CollisionShape2D" parent="."]
visible = false
rotation = -1.5708
shape = ExtResource( 13 )
one_way_collision = true

[node name="CollisionShapeOuterUp" type="CollisionShape2D" parent="."]
visible = false
rotation = 3.14159
shape = ExtResource( 13 )
one_way_collision = true

[node name="CollisionShapeOuterDown" type="CollisionShape2D" parent="."]
visible = false
shape = ExtResource( 13 )
one_way_collision = true

[node name="MotionBlurParticles" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
scale = Vector2( 1e-05, 1e-05 )
emitting = false
amount = 2
lifetime = 0.5
speed_scale = 2.0
local_coords = false
process_material = SubResource( 15 )
texture = ExtResource( 4 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
